# Smokey

./: .clang-format  .gitignore  CMakeLists.txt  README.md  branches.txt  can-utils.txt
app/: CMakeLists.txt
app/avic/: CMakeLists.txt  Dependecy.txt
app/avic/include/: your_stuff.h
app/avic/qml/: DashboardGaugeStyle.qml  ValueSource.qml  cluster-gauges.qml
app/avic/src/: your_stuff.cpp
app/emulator/: CMakeLists.txt  main.cpp
app/emulator/include/: emulator.hpp  engine_pindle_states.hpp
app/emulator/src/: emulator.cpp  emulator_data.cpp  engine_pindle_states.cpp
app/input_handler/: CMakeLists.txt  main.cpp
app/input_handler/include/: input_handler.hpp  throttle.hpp
app/input_handler/src/: input_handler_get_input.cpp  mock_key_input.cpp
app/input_handler/temp_gear/include/: temp_set_gear.hpp
app/input_handler/temp_gear/src/: temp_set_gear.cpp
app/input_handler/test/unit/: test_throttle.cpp
can_decoder/examples/: CMakeLists.txt  read_example.cpp
can_decoder/include/: can_decoder.hpp
can_decoder/src/: can_decoder.cpp
can_encoder/: CMakeLists.txt
can_encoder/examples/: CMakeLists.txt  write_example.cpp
can_encoder/include/: InterfaceFromInputHandler.hpp  InterfaceToCANEncoder.hpp  interface_from_input_handler.hpp
can_encoder/src/: CANEncoder.cpp  InterfaceFromInputHandler.cpp  InterfaceToCANEncoder.cpp  can_encoder.cpp  interface_from_input_handler.cpp
documentation/: README.md
emulator/: CMakeLists.txt  main.cpp
emulator/include/: emulator.hpp  engine_pindle_states.hpp
emulator/src/: emulation.cpp  emulator.cpp  emulator2.cpp  engine_pindle_states.cpp
gtest_examples/: install.txt
gtest_examples/unit/: CMakeLists.txt  CmakeLists.txt  compile_commands.json  smokey_test.cpp  storagehandler_test.cpp
include/: test.hpp
input_handler/: CMakeLists.txt  main.cpp
input_handler/include/: InterfaceToCANEncoder.hpp  input_handler.hpp  interface_to_can_encoder.hpp  mock_key_input.hpp  smokey_data.hpp  throttle.hpp
input_handler/src/: InputHandler.cpp  InterfaceToCANEncoder.cpp  README.md  input_handler.cpp  input_handler_get_input.cpp  interface_to_can_encoder.cpp  mock_key_input.cpp  throttle.cpp
input_handler/test/: main_test.cpp
input_handler/test/unit/: test_throttle.cpp
lib/: CMakeLists.txt
lib/libcandecoder/examples/: CMakeLists.txt  read_example.cpp
lib/libcanencoder/: CMakeLists.txt
lib/libcanencoder/examples/: CMakeLists.txt  write_example.cpp
lib/libcanencoder/include/: can_encoder.hpp  interface_from_input_handler.hpp
lib/libcanencoder/src/: can_encoder.cpp  interface_from_input_handler.cpp
lib/libcanencoder/test/: CMakeLists.txt  interface_to_can_encoder.cpp
lib/libcanio/: CMakeLists.txt
lib/libcanio/include/: canio.hpp  smokey_data.hpp
libcanio/: CMakeLists.txt
libcanio/include/: canio.hpp
libcanio/src/: canio.cpp
socketcan-cpp-master/examples/: read_write.cpp
src/: input_handler.cpp
test/: CMakeLists.txt
